--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # DS_Store files
 *.DS_Store
 
+# Ignore all files in output directory except README
+output/*
+!output/README.md
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
