--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: python-intro
 channels:
   - conda-forge
   - bioconda
+  - anaconda
 dependencies:
   - python>=3.6
   - jupyter
@@ -20,5 +21,5 @@ dependencies:
   - PIL
   - imageio
   - random
-  - sklearn
-  - skimage
+  - scikit-learn
+  - scikit-image
