--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,8 @@ channels:
   - anaconda
 dependencies:
   - python>=3.6
+  - jsonschema-with-format-nongpl
+  - webcolors
   - jupyter
   - ipykernel
   - biopython
@@ -21,3 +23,4 @@ dependencies:
   - scikit-learn
   - scikit-image
   - google-colab
+
